@@ -13,11 +13,11 @@ name: Directory-Organize
 provides:
   Directory::Organize:
     file: lib/Directory/Organize.pm
-    version: v0.9.2
+    version: v0.9.3
 requires:
   Getopt::Long: 0
   Term::ReadKey: 0
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.9.2
+version: v0.9.3
